updating h1 status and class details

--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
         <h1 class='masthead-heading'>Brian O'Connor</h1>
+      
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am 39 years old, I have 2 daughters Chloe and Avery</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Massachusetts</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hobbies would be for someone with free time. I do however enjoy working in the yard and spending time with my family</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd have to say this... I would love to learn to develop and design software</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Fort Worth TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I find it very interesting learing about the growing internet and what can be done to help it grow</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/boconnor20">Github</a></li>
         </ul>
     </footer>
 </body>
