updating h1 status and class details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am 39 years old, I have 2 daughters Chloe and Avery</p>
+      <p>I am 39 years old. I am married to my beautiful wife Chelsey and we have 2 daughters Chloe and Avery</p>
       <h1>Where I'm From</h1>
       <p>I am originally from Massachusetts</p>
       <h1>What are your favorite hobbies?</h1>
